--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.2",
     "lodash": "^4.17.21",
-    "mapbox-gl": "^2.15.0",
+    "mapbox-gl": "^3.6.0",
+    "maplibre-gl": "^4.6.0",
     "mui-one-time-password-input": "^1.1.1",
     "next": "^14.2.0",
     "notistack": "^3.0.1",
@@ -72,7 +73,7 @@
     "react-hook-form": "^7.44.3",
     "react-i18next": "^12.3.1",
     "react-lazy-load-image-component": "^1.6.0",
-    "react-map-gl": "^7.0.25",
+    "react-map-gl": "^7.1.7",
     "react-markdown": "^8.0.7",
     "react-organizational-chart": "^2.2.1",
     "react-quill": "^2.0.0",
@@ -97,7 +98,7 @@
     "@svgr/webpack": "^8.0.1",
     "@types/autosuggest-highlight": "^3.2.0",
     "@types/lodash": "^4.14.195",
-    "@types/mapbox-gl": "^2.7.11",
+    "@types/mapbox-gl": "^3.4.0",
     "@types/node": "^20.2.5",
     "@types/nprogress": "^0.2.0",
     "@types/numeral": "^2.0.5",
