--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "stylis": "^4.2.0",
     "stylis-plugin-rtl": "^2.1.1",
     "yet-another-react-lightbox": "^3.10.1",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
